# FraudShield-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
app/: main.py
app/config/: settings.py
app/core/: exceptions.py  logger.py
app/routers/: prediction.py
app/schemas/: prediction.py
app/services/: prediction_service.py
dashboard/: main.py
dashboard/components/: analytics.py  batch_prediction.py  explainability.py  prediction_form.py  prediction_result.py  sidebar.py
models/artifacts/: dataset_version.json  random_forest.pkl
src/data/: data_loader.py  schema.py  splitter.py  statistics.py  validator.py  versioning.py
src/evaluation/: evaluator.py
src/explainability/: explanation.py  shap_explainer.py
src/feature_engineering/: base_processor.py  feature_selector.py  missing_value_handler.py  preprocessing_pipeline.py  scaler.py
src/inference/: model_loader.py  prediction_pipeline.py  predictor.py
src/models/: model_saver.py
src/pipelines/: training_pipeline.py
src/training/: hyperparameter_tuner.py  model_factory.py  parameter_grid.py  trainer.py
tests/: test_prediction_pipeline.py  test_predictor.py
