[project]
name = "fraudshield-ai"
version = "1.0.0"
description = "Enterprise Credit Card Fraud Detection Platform"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Gopinath A" }
]

license = { text = "MIT" }

keywords = [
    "machine-learning",
    "fraud-detection",
    "credit-card",
    "fastapi",
    "streamlit",
    "mlops",
    "xgboost"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

testpaths = [
    "tests"
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true